--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,26 +1,16 @@
-<ion-modal-view hide-back-button="true">
-    <ion-header-bar>
-        <h1 class="title">Login to FogBugz</h1>
-    </ion-header-bar>
-    <ion-content>
-        <form ng-submit="doLogin()">
-            <div class="list">
-                <label class="item item-input">
-                    <span class="input-label">Email</span>
-                    <input type="email" ng-model="loginData.email">
-                </label>
-                <label class="item item-input">
-                    <span class="input-label">Password</span>
-                    <input type="password" ng-model="loginData.password">
-                </label>
-                <label class="item item-input">
-                    <span class="input-label">FogBugz URL</span>
-                    <input type="text" ng-model="loginData.url">
-                </label>
-                <label class="item">
-                    <button class="button button-block button-positive" type="submit">Log in</button>
-                </label>
-            </div>
-        </form>
-    </ion-content>
-</ion-modal-view>
+<ion-view view-title="Login" name="login-view">
+  <ion-content class="padding">
+      <div class="list list-inset">
+          <label class="item item-input">
+              <input type="text" placeholder="Email" ng-model="data.email">
+          </label>
+          <label class="item item-input">
+              <input type="password" placeholder="Password" ng-model="data.password">
+          </label>
+          <label class="item item-input">
+              <input type="text" placeholder="FogBugz Url" ng-model="data.url">
+          </label>
+      </div>
+      <button class="button button-block button-positive" ng-click="login()">Login</button>
+  </ion-content>
+</ion-view>
