Working on cases refresh bug

--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -2,11 +2,11 @@
     <ion-content>
         <div class="list">
             <label class="item item-input">
-                <textarea msd-elastic ng-model="case.sTitle.__cdata"></textarea>
+                <textarea msd-elastic ng-model="case.sTitle"></textarea>
             </label>
             <label class="item item-input">
                 <span class="input-label">Project</span>
-                <input type="text" value="{{case.sProject.__cdata}}">
+                <input type="text" value="{{case.sProject}}">
             </label>
             <label class="item item-input">
                 <span class="input-label">Area</span>
