--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -6,7 +6,7 @@
             </label>
             <label class="item item-input">
                 <span class="input-label">Project</span>
-                <input type="text" value="{{case.sProject}}">
+                <input type="text" value="{{case.sProject.__cdata}}">
             </label>
             <label class="item item-input">
                 <span class="input-label">Area</span>
