--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,8 +15,8 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item nav-clear menu-close ng-click="login()">
-                    Login
+                <ion-item nav-clear menu-close ng-click="logout()">
+                    Logout
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/search">
                     Search
