Filled in some case details

--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -10,23 +10,23 @@
             </label>
             <label class="item item-input">
                 <span class="input-label">Area</span>
-                <input type="text">
+                <input type="text" value="{{case.sArea.__cdata}}">
             </label>
             <label class="item item-input">
                 <span class="input-label">Milestone</span>
-                <input type="text">
+                <input type="text" value="{{case.sFixFor.__cdata}}">
             </label>
             <label class="item item-input">
                 <span class="input-label">Category</span>
-                <input type="text">
+                <input type="text" value="{{case.sCategory.__cdata}}">
             </label>
             <label class="item item-input">
                 <span class="input-label">Assigned To</span>
-                <input type="text">
+                <input type="text" value="{{case.sPersonAssignedTo.__cdata}}">
             </label>
             <label class="item item-input">
                 <span class="input-label">Priority</span>
-                <input type="text">
+                <input type="text" value="{{case.sPriority.__cdata}}"">
             </label>
             <label class="item item-input">
                 <span class="input-label">Tags</span>
