--- a/www/templates/cases.html
+++ b/www/templates/cases.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Cases">
     <ion-content>
         <ion-list>
-            <ion-item ng-repeat="case in cases" href="#/app/cases/{{case.ixBug}}">
+            <ion-item ng-repeat="case in cases" href="#/app/cases/{{case.ixBug}}?projectId={{case.ixProject}}">
                 {{case.sTitle.__cdata}}
             </ion-item>
         </ion-list>
