Got case edit view stubbed out

--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -8,15 +8,15 @@
       </div>
       <div class="item tabs tabs-secondary tabs-icon-left">
         <a class="tab-item" href="#">
-          <i class="icon ion-person"></i>
+          <i class="icon ion-person positive"></i>
           Assign
         </a>
         <a class="tab-item" href="#">
-          <i class="icon ion-checkmark"></i>
+          <i class="icon ion-checkmark positive"></i>
           Resolve
         </a>
-        <a class="tab-item" href="#">
-          <i class="icon ion-edit"></i>
+        <a class="tab-item" href="#" ng-click="editCase()">
+          <i class="icon ion-edit positive"></i>
           Edit
         </a>
       </div>
