--- a/www/templates/cases.html
+++ b/www/templates/cases.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Cases">
     <ion-content>
+      <div class="padding"><h5 class="subdued">All cases</h5></div>
         <ion-list>
             <ion-item ng-repeat="case in cases.case" href="#/app/cases/{{case.ixBug}}?projectId={{case.ixProject}}">
                 {{case.sTitle.__cdata}}
