Added platforms and worked edit view

--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -4,7 +4,7 @@
     <h1 class="title">Edit Case {{ case.ixBug }}</h1>
     <button class="button button-positive">Save</button>
   </ion-header-bar>
-  <ion-content style="overflow:hidden !important;">
+  <ion-content scroll="true">
     <div class="card">
       <span ng-form="editForm">
         <div class="list">
