--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -12,6 +12,23 @@
             <div class="input-label">Title</div>
             <input type="text" name="title" ng-model="case.sTitle">
           </label>
+          <label class="item item-divider">
+            <h3>Edited by logged in user</h3>
+            <h4 class="subdued">Current date</h4>
+          </label>
+          <label class="item item-input" ng-class="{dirty: editForm.event.$dirty}">
+            <textarea msd-elastic="\n\n" id="event" name="event" ng-model="case.sNewEvent" placeholder="Add a case note..."></textarea>
+          </label>
+          <label class="item tabs tabs-secondary tabs-icon-left">
+            <a class="tab-item" href="#">
+              <i class="icon ion-paperclip positive"></i>
+              Add Attachment
+            </a>
+            <a class="tab-item" href="#">
+              <i class="icon ion-camera positive"></i>
+              Take Photo
+            </a>
+          </label>
           <label class="item item-input item-select" ng-class="{dirty: editForm.project.$dirty}">
             <div class="input-label">Project</div>
             <select name="project" ng-model="project" ng-options="p.sProject for p in projects"></select>
@@ -39,23 +56,6 @@
           <label class="item item-input item-input" ng-class="{dirty: editForm.tags.$dirty}">
             <div class="input-label">Tags</div>
             <input name="tags" ng-model="tags" type="text">
-          </label>
-          <label class="item tabs tabs-secondary tabs-icon-left">
-            <a class="tab-item" href="#">
-              <i class="icon ion-paperclip positive"></i>
-              Add Attachment
-            </a>
-            <a class="tab-item" href="#">
-              <i class="icon ion-camera positive"></i>
-              Take Photo
-            </a>
-          </label>
-          <label class="item item-divider">
-            <h3>Edited by logged in user</h3>
-            <h4 class="subdued">Current date</h4>
-          </label>
-          <label class="item item-text-wrap">
-            <textarea id="event" name="event" ng-model="case.sNewEvent" placeholder="Add a case note..."></textarea>
           </label>
         </div>
       </span>
