--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="list card">
       <div class="item item-avatar">
-        <img src="img/bug.png">
+        <img ng-src="{{ iconImage }}">
         <h2>{{ case.sTitle.__cdata }}</h2>
         <p><a href="#">{{ case.sProject.__cdata }}</a>: <a href="#">{{ case.sArea.__cdata }}</a> (Milestone: <a href="#">{{ case.sFixFor.__cdata }}</a>)</p>
       </div>
@@ -27,7 +27,7 @@
         </div>
       <div class="row">
         <div class="col col-50">Category</div>
-        <div class="col"><i class="icon ion-bug"></i>&nbsp;{{ case.sCategory.__cdata }}</div>
+        <div class="col"><i class="icon {{ icon }}"></i>&nbsp;{{ case.sCategory.__cdata }}</div>
       </div>
       <div class="row">
         <div class="col col-50">Assigned To</div>
