Fixed title bind cdata issue

--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -10,7 +10,7 @@
         <div class="list">
           <label class="item item-input" ng-class="{dirty: editForm.title.$dirty}">
             <div class="input-label">Title</div>
-            <input type="text" name="title" ng-model="case.sTitle">
+            <input type="text" name="title" ng-model="case.sTitle.__cdata">
           </label>
           <label class="item item-divider">
             <h3>Edited by logged in user</h3>
