--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -16,7 +16,7 @@
             <h3>Edited by logged in user</h3>
             <h4 class="subdued">Current date</h4>
           </label>
-          <label class="item item-input dirty" ng-class="{dirty: editForm.event.$dirty}">
+          <label class="item item-input" ng-class="{dirty: editForm.event.$dirty}">
             <textarea msd-elastic="\n\n" id="event" name="event" ng-model="case.sNewEvent" placeholder="Add a case note..."></textarea>
           </label>
           <label class="item tabs tabs-secondary tabs-icon-left">
