--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -9,8 +9,7 @@
       <span ng-form="editForm">
         <div class="list">
           <label class="item item-input" ng-class="{dirty: editForm.title.$dirty}">
-            <div class="input-label">Title</div>
-            <input type="text" name="title" ng-model="case.sTitle.__cdata">
+            <input type="text" name="title" ng-model="case.sTitle.__cdata" class="title">
           </label>
           <label class="item item-divider">
             <h3>Edited by logged in user</h3>
