--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -30,31 +30,31 @@
           </label>
           <label class="item item-input item-select" ng-class="{dirty: editForm.status.$dirty}">
             <div class="input-label">Status</div>
-            <select name="status" ng-model="status" ng-options="s.sStatus for s in statuses"></select>
+            <select name="status" ng-model="case.sStatus" ng-options="s.sStatus as s.sStatus for s in statuses track by s.sStatus"></select>
           </label>
           <label class="item item-input item-select" ng-class="{dirty: editForm.project.$dirty}">
             <div class="input-label">Project</div>
-            <select name="project" ng-model="project" ng-options="p.sProject for p in projects"></select>
+            <select name="project" ng-model="case.sProject" ng-options="p.sProject as p.sProject for p in projects track by p.sProject"></select>
           </label>
           <label class="item item-input item-select" ng-class="{dirty: editForm.area.$dirty}">
             <div class="input-label">Area</div>
-            <select name="area" ng-model="area" ng-options="a.sArea for a in areas"></select>
+            <select name="area" ng-model="case.sArea" ng-options="a.sArea as a.sArea for a in areas track by a.sArea"></select>
           </label>
           <label class="item item-input item-select" ng-class="{dirty: editForm.milestone.$dirty}">
             <div class="input-label">Milestone</div>
-            <select name="milestone" ng-model="milestone" ng-options="m.sFixFor for m in milestones"></select>
+            <select name="milestone" ng-model="case.sFixFor" ng-options="m.sFixFor as m.sFixFor for m in milestones track by m.sFixFor"></select>
           </label>
           <label class="item item-input item-select" ng-class="{dirty: editForm.category.$dirty}">
             <div class="input-label">Category</div>
-            <select name="category" ng-model="category" ng-options="c.sCategory for c in categories"></select>
+            <select name="category" ng-model="case.sCategory" ng-options="c.sCategory as c.sCategory for c in categories track by c.sCategory"></select>
           </label>
           <label class="item item-input item-select" ng-class="{dirty: editForm.person.$dirty}">
             <div class="input-label">Assigned To</div>
-            <select name="person" ng-model="person" ng-options="p.sFullName for p in people"></select>
+            <select name="person" ng-model="case.sPersonAssignedTo" ng-options="p.sFullName as p.sFullName for p in people track by p.sFullName"></select>
           </label>
           <label class="item item-input item-select" ng-class="{dirty: editForm.priority.$dirty}">
             <div class="input-label">Priority</div>
-            <select name="priority" ng-model="priority" ng-options="p.sPriority for p in priorities"></select>
+            <select name="priority" ng-model="case.sPriority" ng-options="p.sPriority as p.sPriority for p in priorities track by p.sPriority"></select>
           </label>
           <label class="item item-input item-input" ng-class="{dirty: editForm.tags.$dirty}">
             <div class="input-label">Tags</div>
