--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -6,16 +6,16 @@
   </ion-header-bar>
   <ion-content scroll="true">
     <div class="card">
-      <span ng-form="editForm" ng-submit="save()">
+      <form name="form.edit" ng-submit="save()">
         <div class="list">
-          <label class="item item-input" ng-class="{dirty: editForm.title.$dirty}">
+          <label class="item item-input" ng-class="{dirty: form.edit.title.$dirty}">
             <input type="text" name="title" ng-model="case.sTitle.__cdata" class="title">
           </label>
           <label class="item item-divider">
             <h3>Edited by logged in user</h3>
             <h4 class="subdued">Current date</h4>
           </label>
-          <label class="item item-input" ng-class="{dirty: editForm.event.$dirty}">
+          <label class="item item-input" ng-class="{dirty: form.edit.event.$dirty}">
             <textarea msd-elastic="\n\n" id="event" name="event" ng-model="case.newEvent" placeholder="Add a case note..."></textarea>
           </label>
           <label class="item tabs tabs-secondary tabs-icon-left">
@@ -28,40 +28,40 @@
               Take Photo
             </a>
           </label>
-          <label class="item item-input item-select" ng-class="{dirty: editForm.status.$dirty}">
+          <label class="item item-input item-select" ng-class="{dirty: form.edit.status.$dirty}">
             <div class="input-label">Status</div>
-            <select name="status" ng-model="status" ng-options="s.sStatus.__cdata for s in statuses track by s.sStatus"></select>
+            <select name="status" ng-model="case.status" ng-options="s.sStatus.__cdata for s in statuses track by s.ixStatus"></select>
           </label>
-          <label class="item item-input item-select" ng-class="{dirty: editForm.project.$dirty}">
+          <label class="item item-input item-select" ng-class="{dirty: form.edit.project.$dirty}">
             <div class="input-label">Project</div>
-            <select name="project" ng-model="project" ng-options="p.sProject.__cdata for p in projects track by p.sProject"></select>
+            <select name="project" ng-model="case.project" ng-options="p.sProject.__cdata for p in projects track by p.ixProject"></select>
           </label>
-          <label class="item item-input item-select" ng-class="{dirty: editForm.area.$dirty}">
+          <label class="item item-input item-select" ng-class="{dirty: form.edit.area.$dirty}">
             <div class="input-label">Area</div>
-            <select name="area" ng-model="area" ng-options="a.sArea.__cdata for a in areas track by a.sArea"></select>
+            <select name="area" ng-model="case.area" ng-options="a.sArea.__cdata for a in areas track by a.ixArea"></select>
           </label>
-          <label class="item item-input item-select" ng-class="{dirty: editForm.milestone.$dirty}">
+          <label class="item item-input item-select" ng-class="{dirty: form.edit.milestone.$dirty}">
             <div class="input-label">Milestone</div>
-            <select name="milestone" ng-model="milestone" ng-options="m.sFixFor.__cdata for m in milestones track by m.sFixFor"></select>
+            <select name="milestone" ng-model="case.milestone" ng-options="m.sFixFor.__cdata for m in milestones track by m.ixFixFor"></select>
           </label>
-          <label class="item item-input item-select" ng-class="{dirty: editForm.category.$dirty}">
+          <label class="item item-input item-select" ng-class="{dirty: form.edit.category.$dirty}">
             <div class="input-label">Category</div>
-            <select name="category" ng-model="category" ng-options="c.sCategory.__cdata for c in categories track by c.sCategory"></select>
+            <select name="category" ng-model="case.category" ng-options="c.sCategory.__cdata for c in categories track by c.ixCategory"></select>
           </label>
-          <label class="item item-input item-select" ng-class="{dirty: editForm.person.$dirty}">
+          <label class="item item-input item-select" ng-class="{dirty: form.edit.person.$dirty}">
             <div class="input-label">Assigned To</div>
-            <select name="person" ng-model="personAssignedTo" ng-options="p.sFullName.__cdata for p in people track by p.sPerson"></select>
+            <select name="person" ng-model="case.personAssignedTo" ng-options="p.sFullName.__cdata for p in people track by p.ixPerson"></select>
           </label>
-          <label class="item item-input item-select" ng-class="{dirty: editForm.priority.$dirty}">
+          <label class="item item-input item-select" ng-class="{dirty: form.edit.priority.$dirty}">
             <div class="input-label">Priority</div>
-            <select name="priority" ng-model="priority" ng-options="p.sPriority.__cdata for p in priorities track by p.sPriority"></select>
+            <select name="priority" ng-model="case.priority" ng-options="p.sPriority.__cdata for p in priorities track by p.ixPriority"></select>
           </label>
-          <label class="item item-input item-input" ng-class="{dirty: editForm.tags.$dirty}">
+          <label class="item item-input item-input" ng-class="{dirty: form.edit.tags.$dirty}">
             <div class="input-label">Tags</div>
             <input name="tags" ng-model="tags" type="text">
           </label>
         </div>
-      </span>
+      </form>
     </div>
   </ion-content>
 </ion-modal-view>
