--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -41,7 +41,8 @@
     <span ng-repeat="event in events">
       <div class="item item-divider">
         <h3>{{ event.evtDescription.__cdata }}</h3>
-        <h4 class="subdued">{{ event.dt }}</h4>
+        <h4 class="subdued">{{ event.dt | date:'MM/dd/yyyy h:mma'}}</h4>
+        <h4 style="white-space: pre-wrap; font-weight: normal;">{{ event.sChanges.__cdata }}</h4>
       </div>
       <div class="item item-text-wrap" ng-bind-html="event.sHtml.__cdata" ng-show="event.s != ''"></div>
       <div class="spacer" ng-hide="event.s != ''"></div>
